[FEAT] update pub

--- a/index.html
+++ b/index.html
@@ -251,36 +251,12 @@
             <h2 class="mb-5">Publications</h2>
             <p class="mb-5 text-primary"> <b>Types: </b> peer-reviewed journals <b>(J)</b>, peer-reviewed conference proceedings <b>(C)</b>, peer-reviewed extended abstracts <b>(E)</b>, arXiv preprints / manuscripts <b>(P)</b>.  &nbsp;
                 <br />
-                <br /> <b>25</b> total = <b>6</b> J + <b>6</b> C + <b>6</b> E + <b>7</b> P, with 131 citations. &nbsp;
+                <br /> <b>25</b> total = <b>6</b> J + <b>6</b> C + <b>7</b> E + <b>6</b> P, with 142 citations. &nbsp;
                 <br />
                 <br /> Feel free to click on <b> abstract </b> to learn more, or [&nbsp;<a style="color:#268fd6;" class="collapsibleall" id="expall">expand all abstracts </a>&nbsp;] &nbsp; </p>
             <h3> ongoing...</h3>
             <br />
             <ul class="fa-ul mb-0">
-                <li>
-                    <div class="row">
-                        <div class="imgcolumn">
-                            <img class="rounded-corner" style="width:100%;border-radius:10%;border:2px solid dimgrey;" src="./img/publications/lin2020unified.png" alt="lin2020unified" >
-                        </div>
-                        <div class="textcolumn">
-                            [P7]&nbsp;<b class="text-primary" id="unifiedRL"> Unified Models of Human Behavioral Agents in Bandits, Contextual Bandits and RL </b>
-                            <br />
-                            <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
-                            <br />
-                            <br/>
-                            <p style="color:black"> under review </p>
-                            [
-                            <a href="https://arxiv.org/abs/2005.04544">arXiv</a> ]&nbsp; [
-                            <a href="./bibTex/lin2020unified.txt">bibTex</a> ]&nbsp; [
-                            <a href="https://github.com/doerlbh/mentalRL">code</a> ]&nbsp; [
-                            <a  style="color:#268fd6;" class="collapsible">abstract&nbsp;</a> ]
-                            <div class="abstract rounded-corner">
-                                <p> Artificial behavioral agents are often evaluated based on their consistent behaviors and performance to take sequential actions in an environment to maximize some notion of cumulative reward. However, human decision making in real life usually involves different strategies and behavioral trajectories that lead to the same empirical outcome. Motivated by clinical literature of a wide range of neurological and psychiatric disorders, we propose here a more general and flexible parametric framework for sequential decision making that involves a two-stream reward processing mechanism. We demonstrated that this framework is flexible and unified enough to incorporate a family of problems spanning Multi-armed bandits (MAB), contextual bandits (CB) and reinforcement learning (RL), which decompose the sequential decision making process in different levels. Inspired by the known reward processing abnormalities of many mental disorders, our clinically-inspired agents demonstrated interesting behavioral trajectories and comparable performance on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the PacMan game across different reward stationarities in a lifelong learning setting.  </p>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <br />
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
@@ -428,6 +404,30 @@
             <h3> 2020 </h3>
             <br />
             <ul class="fa-ul mb-0">
+                <li>
+                    <div class="row">
+                        <div class="imgcolumn">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;border:2px solid dimgrey;" src="./img/publications/lin2020unified.png" alt="lin2020unified" >
+                        </div>
+                        <div class="textcolumn">
+                            [E7]&nbsp;<b class="text-primary" id="unifiedRL"> Unified Models of Human Behavioral Agents in Bandits, Contextual Bandits and RL </b>
+                            <br />
+                            <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
+                            <br />
+                            <br/>
+                            <p style="color:black"> KDD 2020 Workshop on AI for Good Mental Health (GOOD) </p>
+                            [
+                            <a href="https://arxiv.org/abs/2005.04544">arXiv</a> ]&nbsp; [
+                            <a href="./bibTex/lin2020unified.txt">bibTex</a> ]&nbsp; [
+                            <a href="https://github.com/doerlbh/mentalRL">code</a> ]&nbsp; [
+                            <a  style="color:#268fd6;" class="collapsible">abstract&nbsp;</a> ]
+                            <div class="abstract rounded-corner">
+                                <p> Artificial behavioral agents are often evaluated based on their consistent behaviors and performance to take sequential actions in an environment to maximize some notion of cumulative reward. However, human decision making in real life usually involves different strategies and behavioral trajectories that lead to the same empirical outcome. Motivated by clinical literature of a wide range of neurological and psychiatric disorders, we propose here a more general and flexible parametric framework for sequential decision making that involves a two-stream reward processing mechanism. We demonstrated that this framework is flexible and unified enough to incorporate a family of problems spanning Multi-armed bandits (MAB), contextual bandits (CB) and reinforcement learning (RL), which decompose the sequential decision making process in different levels. Inspired by the known reward processing abnormalities of many mental disorders, our clinically-inspired agents demonstrated interesting behavioral trajectories and comparable performance on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the PacMan game across different reward stationarities in a lifelong learning setting.  </p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <br />
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
