[DBG] change author bold style

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
                 </p>
                 <p class="mb-5 text-primary">
-                    I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics and a B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin">Columbia Department of Systems Biology</a> and <a href="https://amath.washington.edu/people/baihan-lin">UW Department of Applied Mathematics</a>.
+                    I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics, a B.A. in Psychology with Honors and recently a M.S. in Applied Mathematics. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin">Columbia Department of Systems Biology</a> and <a href="https://amath.washington.edu/people/baihan-lin">UW Department of Applied Mathematics</a>.
                 </p>
                 <p class="mb-5 text-primary">
                     I am into:
