[FEAT] add sort by research areas

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <br> woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet">modern sofa</a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet">process</a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). </p>
             <b class="text-primary"> Music! &nbsp; </b>
             <p class="mb-5 text-primary">
-                <br> Other than these life bits, I play flute and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/">my cats</a> can still bear it. ;) </p>
+                <br> Other than these life bits, I play flute regularly and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/">my cats</a> can still bear it. ;) </p>
             <p class="mb-5 text-primary">
                 <br> More bits of life can be found <a href="bits"><b>here</b></a>.</p>
         </div>
