[FEAT] automatically render lab experience

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <!--                <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>,-->
                 <span style="color: sandybrown;"> computer vision (CV)</span>,
                 <!--                <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>,-->
-                <span style="color: mediumpurple;"> geometric/topological inference (GT)</span>,
+                <span style="color: mediumpurple;"> geometrical/topological inference (GT)</span>,
                 <!--                <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>,-->
                 <span style="color: seagreen;"> systems biology/genomics (SB)</span>,
                 <!--                <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>,-->
@@ -129,122 +129,8 @@
                 I also maintain close industrial collaborations with IBM Research and Microsoft Research.
             </p>
 
-            <p class="mb-5 text-primary">
-            <table align="left" border=1 frame=void rules=rows class="mb-5 text-primary">
-                <tr style="padding:2px;border-radius:4px 4px 0 0;background-color:lightgrey;">
-                    <th> From </th>
-                    <th> To </th>
-                    <th> At </th>
-                    <th> With </th>
-                    <th> Published </th>
-                    <th> On </th>
-                </tr>
-                <tr>
-                    <td> 2017 </td>
-                    <td> now </td>
-                    <td> my own time </td>
-                    <td> mostly single-authored </td>
-                    <td> <a href="#miniVox">[P2]</a><a href="#voiceIDdemo">[C8]</a><a href="#constrainMDL">[P5]</a><a href="#v2r">[C6]</a><a href="#NNmodelijcai">[C3]</a><a href="#scTSAismb">[E3]</a> </td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:plum;">SP</span> </td>
-                </tr>
-                <tr>
-                    <td> 2017 </td>
-                    <td> now </td>
-                    <td> IBM </td>
-                    <td> CompNeuro & AI Foundations Groups</td>
-                    <td> <a href="#unifiedRL">[C7]</a><a href="#dilemmaRLnips">[P4]</a><a href="#splitQL">[C5]</a><a href="#SQLijcai">[C2]</a><a href="#ABaCoDEicdm">[C1]</a><a href="#splitQLnips">[E5]</a><a href="#modelRL">[E4]</a> </td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span> </td>
-                </tr>
-                <tr>
-                    <td> 2017 </td>
-                    <td> 2017 </td>
-                    <td> Microsoft </td>
-                    <td> EPIC & HCI Groups </td>
-                    <td> <a href="#pinocchio">[P1]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span></td>
-                </tr>
-                <tr>
-                    <td> 2018 </td>
-                    <td> now </td>
-                    <td> Columbia </td>
-                    <td> Visual Inference Lab (PI: Kriegeskorte) </td>
-                    <td> <a href="#AGTICnips">[P3]</a><a href="#RepDynccn">[C4]</a><a href="#scTSAnips">[E6]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span> </td>
-                </tr>
-                <tr>
-                    <td> 2018 </td>
-                    <td> now </td>
-                    <td> </td>
-                    <td> Neuro Theory Center (PI: Qian) </td>
-                    <td> <a href="#constrainMDL">[P5]</a><a href="#NNmodelijcai">[C3]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span> </td>
-                </tr>
-                <tr>
-                    <td> 2018 </td>
-                    <td> 2018 </td>
-                    <td> </td>
-                    <td> Math Genomics Lab of DSB (PI: Rabadan) </td>
-                    <td> <a href="#scTSAnips">[E6]</a><a href="#scTSAismb">[E3]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span> </td>
-                </tr>
-                <tr>
-                    <td> 2017 </td>
-                    <td> 2017 </td>
-                    <td> </td>
-                    <td> Comp Bio Lab of CS (PI: Pe’er) </td>
-                    <td> <a href="#PDbiomarkerrsg">[E2]</a>&nbsp;</td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span> </td>
-                </tr>
-                <tr>
-                    <td> 2017 </td>
-                    <td> 2017 </td>
-                    <td> UW </td>
-                    <td> UbiComp Lab of CSE & EE (PI: Patel) </td>
-                    <td> </td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span> </td>
-                </tr>
-                <tr>
-                    <td> 2015 </td>
-                    <td> 2017 </td>
-                    <td> </td>
-                    <td> Institute for Protein Design (PI: Baker) </td>
-                    <td> <a href="#selfAssjacs">[J5]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span> </td>
-                </tr>
-                <tr>
-                    <td> 2016 </td>
-                    <td> 2016 </td>
-                    <td> </td>
-                    <td> Biophysics Lab of Applied Math (PI: Qian) &nbsp; &nbsp;</td>
-                    <td> </td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:skyblue;">AM</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span></td>
-                </tr>
-                <tr>
-                    <td> 2014 </td>
-                    <td> 2016 </td>
-                    <td> </td>
-                    <td> Vision Neuroscience Lab (PI: Olavarria) </td>
-                    <td> <a href="#patchjcn">[J6]</a><a href="#ODCneurofuture">[E1]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span> </td>
-                </tr>
-                <tr>
-                    <td> 2014 </td>
-                    <td> 2017 </td>
-                    <td> BIME </td>
-                    <td> State Key Lab of Pathogen & Biosecurity </td>
-                    <td> <a href="#GoogleZika">[J2]</a><a href="#ModelZika">[J3]</a><a href="#IntegrateZika">[J4]</a><a href="#systemEBOV">[J1]</a></td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:skyblue;">AM</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span></td>
-                </tr>
-                <tr>
-                    <td> 2013 </td>
-                    <td> 2013 </td>
-                    <td> BGI </td>
-                    <td> Personalized Genome Group </td>
-                    <td> </td>
-                    <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span></td>
-                </tr>
-            </table>
-            </p>
+            <div id="labs_container"></div>
+
         </div>
     </section>
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
