--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
             <div id="pubs_container"></div>
 
+            <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.1/xlsx.full.min.js"></script>
             <script src="./js/pubs.js"></script>
         </div>
