[FEAT] make the page slimmer

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
                     <!-- , with <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Niko Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>.  -->
                     I develop neuroscience-inspired AI systems and apply ML to understand human brains (Neuro &harr; AI).
                     <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
-                </p>
-                <p class="mb-5 text-primary">
+                <!-- </p> -->
+                <br /><br />
+                <!-- <p class="mb-5 text-primary"> -->
                     I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics, a B.A. in Psychology with Honors and recently an M.S. in Applied Mathematics. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin">Columbia Department of Systems Biology</a> and <a href="https://amath.washington.edu/people/baihan-lin">UW Department of Applied Mathematics</a>.
-                </p>
-                <p class="mb-5 text-primary">
+                <!-- </p>-->
+                <br /><br />
+                <!-- <p class="mb-5 text-primary"> -->
                     I am into:
                     <br/>
                     <span class="field">
@@ -126,7 +128,6 @@
                 <!--                <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span>,-->
                 and <span style="color: salmon;"> translational medicine/psychiatry (TM)</span>.
                 <!--                <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span>.-->
-                I also maintain close industrial collaborations with IBM Research and Microsoft Research.
             </p>
 
             <div id="labs_container"></div>
@@ -147,17 +148,20 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="life">
         <div class="my-auto">
             <h2 class="mb-5">Life</h2>
-            <b class="text-primary"> I am always curious about the world and I like exploring new things. &nbsp; </b>
-            <p class="mb-5 text-primary">
-                <br>Although New York is not like Seattle with all the Nature, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here easily). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time next year. </p>
-            <b class="text-primary"> Despite doing mostly theoretical research in recent days, I love making tangible things: &nbsp; </b>
-            <p class="mb-5 text-primary">
-                <br> woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet">modern sofa</a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet">process</a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). </p>
-            <b class="text-primary"> Music! &nbsp; </b>
-            <p class="mb-5 text-primary">
-                <br> Other than these life bits, I play flute regularly and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/">my cats</a> can still bear it. ;) </p>
-            <p class="mb-5 text-primary">
-                <br> More bits of life can be found <a href="bits"><b>here</b></a>.</p>
+            <p class="text-primary"> <b> I am always curious about the world and I like exploring new things. &nbsp; </b>
+            <br /><br />
+            Although New York is not like Seattle with all the Nature, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here easily). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time next year. 
+            <br /><br />
+            <b> Despite doing mostly theoretical research in recent days, I love making tangible things: &nbsp; </b>
+            <br /><br />
+            woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet">modern sofa</a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet">process</a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). 
+            <br /><br />
+            <b> Music! &nbsp; </b>
+            <br /><br />
+            Other than these life bits, I play flute regularly and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/">my cats</a> can still bear it. ;) 
+            <br /><br />
+            More bits of life can be found <a href="bits"><b>here</b></a>.
+            </p>
         </div>
     </section>
 </div>
