[FEAT] add CV placeholder

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                     </span>
                     <br/>
                     <span class="handwritten" id="questions"> <span style='color: white;'>How to best visualize high-dimensional dynamic data? How to generate creative design computationally given simple aesthetic prior? How to model human creativity? How to generate creative processes with state-space language?</span> </span>
+                
+                    <br/><br/>
+                    Here are my [<a href="https://www.baihan.nyc/">CV</a>] and [<a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">Google Scholar</a>].
                 </p>
 
                 <!--
