[FEAT] update CV

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <span class="handwritten" id="questions"> <span style='color: white;'>How to best visualize high-dimensional dynamic data? How to generate creative design computationally given simple aesthetic prior? How to model human creativity? How to generate creative processes with state-space language?</span> </span>
                 
                     <br/><br/>
-                    Here are my [ <a href="https://www.baihan.nyc/pdfs/CV_Baihan_Lin_2020_09_25.pdf">CV</a> ] and [ <a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">Google Scholar</a> ].
+                    Here are my [ <a href="https://www.baihan.nyc/pdfs/CV_Baihan_Lin.pdf">CV</a> ] and [ <a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">Google Scholar</a> ].
                 </p>
 
                 <!--
