[FEAT] update footer

--- a/html/footer.html
+++ b/html/footer.html
@@ -6,5 +6,5 @@
          -->
     <footer style="align:center;">&copy; Copyright 2016
     <script>
-        new Date().getFullYear() > 2016 && document.write("-" + new Date().getFullYear());
+        new Date().getFullYear() > document.write("-" + new Date().getFullYear());
     </script> by Baihan Lin</footer>
