--- a/html/footer.html
+++ b/html/footer.html
@@ -4,7 +4,6 @@
 
         <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
          -->
-    <footer style="align:center;">&copy; Copyright 2016
-    <script>
-        new Date().getFullYear() > document.write("-" + new Date().getFullYear());
-    </script> by Baihan Lin</footer>
+    <footer style="align:center;">&copy; Copyright 2016-
+    <script>document.write(new Date().getFullYear())</script> 
+    by Baihan Lin</footer>
