[FEAT] update footer

--- a/html/footer.html
+++ b/html/footer.html
@@ -5,5 +5,5 @@
         <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
          -->
     <footer style="align:center;">&copy; Copyright 2016-
-    <script>document.write(new Date().getFullYear())</script> 
+    <script type="text/javascript">new Date().getFullYear()</script> 
     by Baihan Lin</footer>
