--- a/html/footer.html
+++ b/html/footer.html
@@ -4,6 +4,4 @@
 
         <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
          -->
-    <footer style="align:center;">&copy; Copyright 2016 - 
-        <span id="cdate"></span><script>document.getElementById("cdate").innerHTML = (new Date().getFullYear());</script> 
-    by Baihan Lin, all rights reserved.</footer>
+    <footer style="align:center;">&copy; Copyright since 2016, Baihan Lin, all rights reserved.</footer>
