--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="mb-5 text-primary">
                     I am a Ph.D. candidate pursuing Computational Neuroscience in the <a href="https://ctn.zuckermaninstitute.columbia.edu/">Center for Theoretical Neuroscience</a> and <a href="https://zuckermaninstitute.columbia.edu/">Zuckerman Mind Brain Behavior Institute</a> at Columbia University.
                     <!-- , with <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Niko Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>.  -->
-                    Academically, I create neuroscience-inspired AI systems and apply ML to understand human brains (Neuro &harr; AI). Industrially, I develop large scale ML systems to model complex biological and cognitive systems, in applications such as healthcare, user modeling, computational phenotyping, time series analysis and speech recognition.
+                    Academically, I create neuroscience-inspired AI systems and apply ML to understand human brains (Neuro &harr; AI) in their healthy and abnormal states. Industrially, I develop large scale ML systems to model complex biological and cognitive systems, in applications such as healthcare, user modeling, computational phenotyping, time series analysis and speech recognition.
                     <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
                 <!-- </p> -->
                 <br /><br />
@@ -49,6 +49,11 @@
                 <!-- </p>-->
                 <br /><br />
                 <!-- <p class="mb-5 text-primary"> -->
+                    In the long term, I believe in the power of technology to progress the everchanging social norms and solve critical socioeconomic challenges in the world. Feel free to reach out for academic, industrial and humanitarian collaborations~ 
+                    <!-- </p>-->
+                    <br /><br />
+                <!-- <p class="mb-5 text-primary"> -->
+
                     I am into:
                     <br/>
                     <span class="field">
